# data_science_bootcamp_lecture_1

./: case_study_sample_deck_jin_meng.pptx  data_science_bootcamp_lecture_1_slides.pptx  datathan_2025.html  datathan_2025.md  main.py  pyproject.toml  repo_setup_instructions.md
analysis_pipeline/: 1_data_etl.ipynb  2_data_exploration.ipynb  3_model_selection.ipynb  4_model_deployment.ipynb  data_collection_data_exploration.ipynb  data_etl.ipynb  data_etl_09162025.ipynb  data_exploration.ipynb  data_exploration_09162025.ipynb  model_deployment.ipynb  model_selection.ipynb  model_selection_09162025.ipynb
analysis_tool_chest/: data_etl.py  data_exploration.py  model_selection.py
