[project]
name = "data-science-bootcamp-lecture-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.2.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rdata>=0.11.2",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch>=2.8.0",
    "xgboost>=3.0.4",
    "ydata-profiling>=4.16.1",
]
